--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
-    "next": "15.5.6",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "openai": "^6.10.0",
     "react": "19.1.0",
